--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
     />
     <meta name="author" content="Emilio Tinoco Palma" />
 
+    <!--Bootstrap-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+
     <!--Cargar la página rápidamente-->
     <link rel="preload" href="css/style.css" as="style" />
     <!--Hoja de estilos CSS-->
