--- a/cumpleanos.html
+++ b/cumpleanos.html
@@ -73,7 +73,19 @@
       <article id="tendencias" class="tendencias text-center">
         <h1>CUMPLEAÑOS Y PASTELES</h1>
       </article>
-    
+    </main>
+
+    <!--Galería de imágenes-->
+
+    <section class="container b none" id="tendencias">
+      <article
+        class="article d-flex justify-content-between align-items-center flex-nowrap mt-2 mp-2 nav-white"
+      >
+        <a target="_blank" href="imgs/cumpleanos-39.webp">
+          <img src="imgs/cumpleanos-39.webp" alt="Globos de números" />
+        </a>
+        <div class="desc">Globos de números</div>
+      </article>
 
       <article>
         <a target="_blank" href="imgs/arreglo-de-globos.webp">
