configuración de package.json

--- a/contacto.html
+++ b/contacto.html
@@ -12,6 +12,24 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+
+       <!--Cargar la página rápidamente-->
+       <link rel="preload" href="css/style.css" as="style" />
+       <!--Hoja de estilos CSS-->
+       <link rel="stylesheet" href="css/style.css" />
+       <!--Ícono-->
+       <link rel="icon" href="imgs/decofest-logo.png" />
+     </head>
+     <!--Comienza body-->
+     <body>
+       <!-- Comienza header -->
+       <header>
+         <!--Caja Violeta-->
+         <div class="div-purple">
+           <h2>
+             50% de descuento en nuestro curso de decoración profesional con globos
+           </h2>
+         </div>
             <span class="navbar-toggler-icon light"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
