--- a/contacto.html
+++ b/contacto.html
@@ -30,6 +30,17 @@
              50% de descuento en nuestro curso de decoración profesional con globos
            </h2>
          </div>
+
+      <!--Barra de navegación 2 (Funcional)-->
+      <nav class="navbar navbar-expand-md nav-black pd-dos-cero">
+        <div class="container">
+          <a
+            class="nav-link active a-yellow"
+            aria-current="page"
+            href="index.html"
+            >Inicio</a
+          >
+
             <span class="navbar-toggler-icon light"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
