--- a/contacto.html
+++ b/contacto.html
@@ -13,23 +13,23 @@
       crossorigin="anonymous"
     />
 
-       <!--Cargar la página rápidamente-->
-       <link rel="preload" href="css/style.css" as="style" />
-       <!--Hoja de estilos CSS-->
-       <link rel="stylesheet" href="css/style.css" />
-       <!--Ícono-->
-       <link rel="icon" href="imgs/decofest-logo.png" />
-     </head>
-     <!--Comienza body-->
-     <body>
-       <!-- Comienza header -->
-       <header>
-         <!--Caja Violeta-->
-         <div class="div-purple">
-           <h2>
-             50% de descuento en nuestro curso de decoración profesional con globos
-           </h2>
-         </div>
+    <!--Cargar la página rápidamente-->
+    <link rel="preload" href="css/style.css" as="style" />
+    <!--Hoja de estilos CSS-->
+    <link rel="stylesheet" href="css/style.css" />
+    <!--Ícono-->
+    <link rel="icon" href="imgs/decofest-logo.png" />
+  </head>
+  <!--Comienza body-->
+  <body>
+    <!-- Comienza header -->
+    <header>
+      <!--Caja Violeta-->
+      <div class="div-purple">
+        <h2>
+          50% de descuento en nuestro curso de decoración profesional con globos
+        </h2>
+      </div>
 
       <!--Barra de navegación 2 (Funcional)-->
       <nav class="navbar navbar-expand-md nav-black pd-dos-cero">
@@ -40,7 +40,15 @@
             href="index.html"
             >Inicio</a
           >
-
+          <button
+            class="navbar-toggler navbar-dark"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
             <span class="navbar-toggler-icon light"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
